--- a/.github/workflows/strava-kudo.yml
+++ b/.github/workflows/strava-kudo.yml
@@ -26,3 +26,4 @@ jobs:
           CYPRESS_STRAVA_PW: ${{ secrets.CYPRESS_STRAVA_PW }}
           CYPRESS_STRAVA_ATHLETE_ID: ${{ secrets.CYPRESS_STRAVA_ATHLETE_ID }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
